# nextcloud-news-digest

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  LICENSE  README.md  SPEC.md  compose.yaml  pyproject.toml  requirements.txt
.github/workflows/: release.yml
src/: colors.py  config.py  document.py  images.py  main.py  nextcloud_client.py  state.py
src/formats/: __init__.py  json_fmt.py  md_inline.py  pdf.py  txt.py
tests/: test_config.py  test_document.py  test_formats.py  test_images.py  test_main.py  test_nextcloud_client.py  test_state.py
