[project]
name = "nextcloud-news-digest"
version = "1.0.2"
description = "Fetch unread news from a Nextcloud News server and generate documents for Open-Notebook import"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "weasyprint>=60.0",
]

[project.scripts]
nextcloud-news-digest = "src.main:main"

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "responses>=0.25.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.semantic_release]
version_variables = ["pyproject.toml:version"]
version_files = ["pyproject.toml:version"]
commit_message = "chore(release): {version}"